实现加密/解密接口，实现保存配置接口
